@@ -1,13 +1,11 @@
 package com.sages.templates;
 
-import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
-import org.apache.kafka.common.serialization.StringDeserializer;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 
 public class AdvancedConsumer {
@@ -23,6 +21,7 @@ public class AdvancedConsumer {
             for (ConsumerRecord<String, String> record : records) {
                 System.out.println("Key: " + record.key() + ", Value: " + record.value());
                 System.out.println("Partition: " + record.partition() + ", Offset:" + record.offset());
+                System.out.println("Timestamp: " + record.timestamp());
                 consumer.commitSync();
             }
         }
@@ -36,8 +35,8 @@ public class AdvancedConsumer {
         Properties properties = new Properties();
         // TODO setup consumer properties
 
-        KafkaConsumer<String, String> consumer = new KafkaConsumer<String, String>(properties);
-        consumer.subscribe(Arrays.asList(topic));
+        KafkaConsumer<String, String> consumer = new KafkaConsumer<>(properties);
+        consumer.subscribe(List.of(topic));
 
         return consumer;
 
